--- a/style.css
+++ b/style.css
@@ -44,7 +44,8 @@ body * {
 
 #container {
     width: 360px;
-    margin: 50px auto 0px;
+    max-width: 588px;
+    margin: 56px auto 0px;
     padding: 0 24px;
 }
 /*profile*/
@@ -76,13 +77,18 @@ body * {
     left: 0;
     z-index: 1;
     transform: translateY(-50%);
+    animation: slide-back 0.2s;
     
 }
 
 .light #switch button {
-    right: 0;
-    left: initial;
+    animation: slide-in 0.4s forwards;
 }
+
+#switch button:hover {
+    outline: 8px solid var(--highligth-color);
+}
+
 #switch span {
     display: block;
     width: 64px;
@@ -166,4 +172,32 @@ footer {
     text-align: center;
     font-size: 14px;
 } 
+/*mediaqueries */
+@media (min-width: 700px) {
+    :root {
+        --bg-url: url(./assets/bg-desktop.jpg);
+    }
 
+    .light {
+        --bg-url:url(./assets/bg-desktop-ligth.jpg);
+    }
+}
+
+/* animation */
+@keyframes slide-in {
+    from {
+        left: 0;
+    }
+    to {
+        left: 50%;
+    }
+}
+
+@keyframes slide-back {
+    from {
+        left: 50%;
+    }
+    to {
+        left: 0;
+    }
+}
